Add tags to list and id endpoints
