# server/src/main/resources/openapi/v1.yaml
@@ -15,7 +15,7 @@ paths:
           required: true
           schema:
             type: "integer"
-            format: "int32"
+            format: "int64"
       responses:
         "400":
           description: "Bad Request"
@@ -31,7 +31,7 @@ paths:
         "200":
           description: "OK"
           content:
-            'Application/json':
+            'application/json':
               schema:
                 $ref: "#/components/schemas/DbWorkshopItem"
         "404":
@@ -56,7 +56,7 @@ paths:
         "200":
           description: "OK"
           content:
-            'Application/json':
+            'application/json':
               schema:
                 type: "array"
                 items:
@@ -68,7 +68,7 @@ components:
       properties:
         id:
           type: "integer"
-          format: "int32"
+          format: "int64"
         lastSteamUpdate:
           type: "integer"
           format: "int64"
@@ -79,20 +79,46 @@ components:
           type: "string"
         latestVersion:
           type: "string"
+        tags:
+          type: "array"
+          items:
+            type: "object"
+            properties:
+              tag:
+                type: "string"
+              display_name:
+                type: "string"
+            required:
+              - "tag"
+              - "display_name"
       required:
         - "id"
         - "lastSteamUpdate"
         - "lastLocalUpdate"
         - "steamName"
         - "latestVersion"
+        - "tags"
     SimpleWorkshopItem:
       type: "object"
       properties:
         id:
           type: "integer"
-          format: "int32"
+          format: "int64"
         steamName:
           type: "string"
+        tags:
+          type: "array"
+          items:
+            type: "object"
+            properties:
+              tag:
+                type: "string"
+              display_name:
+                type: "string"
+            required:
+              - "tag"
+              - "display_name"
       required:
         - "id"
         - "steamName"
+        - "tags"
